syntax = "proto3";

package comment;

option go_package = "./pkg/pb";

service CommentService {
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {}
  rpc CommentsByNews(CommentsByNewsRequest) returns(CommentsByNewsResponse) {}
}

message CreateCommentRequest {
  uint64 newsId   = 1;
  uint64 parentId = 2;
  uint64 userId   = 3;
  string text     = 4;
  bool   censored = 5;
}

message CreateCommentResponse {
  int64 status = 1;
  string error = 2;
  uint64 id = 3;
}

message CommentsByNewsRequest {
  uint64 newsId = 1;
}

message Comment {
  uint64  id = 1;
  string  text = 2;
  uint64  parentId = 3;
  uint64  childId  = 4;
  bool    censored = 5;
}

message CommentsByNewsResponse {
  int64 status = 1;
  string error = 2;
  repeated Comment comments = 3;
}